tests/ui/struct.stderr
error: attribute on struct
 --> $DIR/struct.rs:6:8
  |
6 | struct foo {}
  |        ^^^
